# mm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cuda/: CMakeLists.txt  README.md
cuda/include/: check_device_props.hpp  definition.hpp  error.hpp  gemm.hpp  gemm.ipp  gemm_fwd.hpp  host_allocation.hpp  host_allocation.ipp  kernel.hpp  kernel.ipp  size.hpp
cuda/src/: check_device_props.cpp  error.cpp  gemm.cpp  kernel.cu  main.cpp
